LSP: make it work